Traducido howto/functional (29 de 206 - 14%)

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -6,39 +6,41 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-02-01 19:27-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Kevin Cajachuán <kevincajachuan@hotmail.com>\n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/howto/functional.rst:3
 msgid "Functional Programming HOWTO"
-msgstr ""
+msgstr "Cómo hacer programación funcional"
 
 #: ../Doc/howto/functional.rst
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/howto/functional.rst:5
 msgid "A. M. Kuchling"
-msgstr ""
+msgstr "A. M. Kuchling"
 
 #: ../Doc/howto/functional.rst
 msgid "Release"
-msgstr ""
+msgstr "Publicación"
 
 #: ../Doc/howto/functional.rst:6
 msgid "0.32"
-msgstr ""
+msgstr "0.32"
 
 #: ../Doc/howto/functional.rst:8
 msgid ""
@@ -48,10 +50,16 @@ msgid ""
 "term:`iterator`\\s and :term:`generator`\\s and relevant library modules "
 "such as :mod:`itertools` and :mod:`functools`."
 msgstr ""
+"En este documento, haremos un recorrido de las características de Python "
+"adecuadas para implementar programas en un estilo funcional. Después de una "
+"introducción de los conceptos de programación funcional, veremos las "
+"características del lenguaje como :term:`iterador <iterator>`\\es y :term:"
+"`generador <generator>`\\es y módulos de librería relevantes como :mod:"
+"`itertools` and :mod:`functools`."
 
 #: ../Doc/howto/functional.rst:16
 msgid "Introduction"
-msgstr ""
+msgstr "Introducción"
 
 #: ../Doc/howto/functional.rst:18
 msgid ""
@@ -59,11 +67,17 @@ msgid ""
 "just interested in learning about Python language features, skip to the next "
 "section on :ref:`functional-howto-iterators`."
 msgstr ""
+"Esta sección explica el concepto básico de programación funcional; si solo "
+"está interesado en aprender acerca de las características del lenguaje "
+"Python, pase a la siguiente sección en :ref:`iteradores <functional-howto-"
+"iterators>`."
 
 #: ../Doc/howto/functional.rst:22
 msgid ""
 "Programming languages support decomposing problems in several different ways:"
 msgstr ""
+"Los lenguajes de programación soportan la descomposición de problemas en "
+"muchas formas diferentes:"
 
 #: ../Doc/howto/functional.rst:24
 msgid ""
@@ -71,6 +85,10 @@ msgid ""
 "instructions that tell the computer what to do with the program's input.  C, "
 "Pascal, and even Unix shells are procedural languages."
 msgstr ""
+"La mayoría de los lenguajes de programación son **procedimentales**: los "
+"programas son listas de instrucciones que le dicen a la computadora qué "
+"hacer con la entrada del programa. C, Pascal e incluso las terminales Unix "
+"son lenguajes procedimentales."
 
 #: ../Doc/howto/functional.rst:28
 msgid ""
@@ -81,6 +99,13 @@ msgid ""
 "to retrieve, and the SQL engine decides whether to scan tables or use "
 "indexes, which subclauses should be performed first, etc."
 msgstr ""
+"En los lenguajes **declarativos**, se escribe una especificación que "
+"describe el problema que se resolverá, y la implementación del lenguaje "
+"averigua como realizar el cálculo de forma eficiente. SQL es el lenguaje "
+"declarativo con el que probablemente esté más familiarizado; una consulta "
+"SQL describe el conjunto de datos que quiere recuperar, y el motor SQL "
+"decide si escanear tablas o usar índices, qué subcláusulas deben ejecutarse "
+"primero, etc."
 
 #: ../Doc/howto/functional.rst:35
 msgid ""
@@ -90,6 +115,12 @@ msgid ""
 "and Python are languages that support object-oriented programming, but don't "
 "force the use of object-oriented features."
 msgstr ""
+"Los programas **orientados a objetos** manipulan colecciones de objetos. Los "
+"objetos tienen estado interno y soportan métodos que consultan o modifican "
+"su estado interno de alguna manera. Smalltalk y Java son lenguajes "
+"orientados a objetos. C++ y Python son lenguajes que soportan la "
+"programación orientada a objetos, pero no fuerzan el uso de las "
+"características orientadas a objetos."
 
 #: ../Doc/howto/functional.rst:41
 msgid ""
@@ -99,6 +130,11 @@ msgid ""
 "known functional languages include the ML family (Standard ML, OCaml, and "
 "other variants) and Haskell."
 msgstr ""
+"La programación **funcional** descompone un problema en un conjunto de "
+"funciones. Idealmente, las funciones solo reciben entradas y producen "
+"salidas, y no tienen ningún estado interno que afecte la salida producida "
+"para una entrada dada. Los lenguajes funcionales bien conocidos incluyen la "
+"familia ML (Standard ML, OCaml, y otras variantes) y Haskell."
 
 #: ../Doc/howto/functional.rst:47
 msgid ""
@@ -112,6 +148,16 @@ msgid ""
 "GUI might be object-oriented while the processing logic is procedural or "
 "functional, for example."
 msgstr ""
+"Los diseñadores de algunos lenguajes de computadora eligen enfatizar en un "
+"enfoque particular para programar. Esto a menudo hace difícil escribir "
+"programas que usen un enfoque diferente. Otros lenguajes son lenguajes "
+"multiparadigma que soportan varios enfoques diferentes. Lisp, C++ y Python "
+"son multiparadigma; puede escribir programas o librerías que son en gran "
+"parte procedimentales, orientados a objetos o funcionales en todos estos "
+"lenguajes. En un programa grande, las diferentes secciones podrían "
+"escribirse usando diferentes enfoques; la GUI podría ser orientada a objetos "
+"mientras la lógica de procesamiento es procedimental o funcional, por "
+"ejemplo."
 
 #: ../Doc/howto/functional.rst:58
 msgid ""
@@ -123,6 +169,15 @@ msgid ""
 "side effects means not using data structures that get updated as a program "
 "runs; every function's output must only depend on its input."
 msgstr ""
+"En un programa funcional, la entrada fluye a través de un conjunto de "
+"funciones. Cada función opera sobre su entrada y produce alguna salida. El "
+"estilo funcional desalienta las funciones con efectos secundarios que "
+"modifican el estado interno o hacen otros cambios que no son visibles en el "
+"valor de retorno de la función. Las funciones que no tienen efectos "
+"secundarios en absoluto se llaman **puramente funcionales**. Evitar los "
+"efectos secundarios significa no usar estructuras de datos que se actualicen "
+"mientras se ejecuta un programa; cada salida de la función debe depender "
+"solo de su entrada."
 
 #: ../Doc/howto/functional.rst:66
 msgid ""
@@ -134,6 +189,13 @@ msgid ""
 "called for their side effects of sending some text to the screen or pausing "
 "execution for a second."
 msgstr ""
+"Algunos lenguajes son muy estrictos sobre la pureza y ni siquiera tienen "
+"declaraciones de asignación como ``a=3`` o ``c = a + b``, pero es difícil "
+"evitar todos los efectos secundarios. Imprimir en la pantalla o escribir en "
+"un archivo en disco son efectos secundarios, por ejemplo. Por ejemplo, en "
+"Python una llamada a la función :func:`print` o :func:`time.sleep` retorna "
+"un valor inútil; solo se llaman por sus efectos secundarios de enviar algún "
+"texto a la pantalla o pausar la ejecución por un segundo."
 
 #: ../Doc/howto/functional.rst:74
 msgid ""
@@ -144,6 +206,12 @@ msgid ""
 "assignments to local variables, but won't modify global variables or have "
 "other side effects."
 msgstr ""
+"Los programas de Python escritos en estilo funcional usualmente no irán al "
+"extremo de evitar todas las E/S o todas las asignaciones; en cambio, "
+"proveerán una interfaz aparentemente funcional pero internamente usará "
+"características no funcionales. Por ejemplo, la implementación de una "
+"función todavía usará asignaciones a variables locales, pero no modificará "
+"variables globales ni tendrá otros efectos secundarios."
 
 #: ../Doc/howto/functional.rst:80
 msgid ""
@@ -156,6 +224,15 @@ msgid ""
 "approaches by writing functions that take and return instances representing "
 "objects in your application (e-mail messages, transactions, etc.)."
 msgstr ""
+"La programación funcional se puede considerar lo opuesto a la programación "
+"orientada a objetos. Los objetos son pequeñas capsulas que contienen algún "
+"estado interno junto con una colección de llamadas a métodos que le permiten "
+"modificar este estado, y los programas consisten en realizar el conjunto "
+"correcto de cambios de estado. La programación funcional quiere evitar "
+"cambios de estado tanto como sea posible y trabaja con flujos de datos entre "
+"funciones. En Python podría combinar los dos enfoques para escribir "
+"funciones que reciban y retornen instancias que representen objetos en su "
+"aplicación (mensajes de e-mail, transacciones, etc.)."
 
 #: ../Doc/howto/functional.rst:89
 msgid ""
@@ -163,32 +240,37 @@ msgid ""
 "you avoid objects and side effects?  There are theoretical and practical "
 "advantages to the functional style:"
 msgstr ""
+"El diseño funcional puede parecer una restricción extraña bajo la cuál "
+"trabajar. Por qué evitaría objetos y efectos secundarios? Hay ventajas "
+"teóricas y prácticas para el estilo funcional:"
 
 #: ../Doc/howto/functional.rst:93
 msgid "Formal provability."
-msgstr ""
+msgstr "Demostrabilidad formal."
 
 #: ../Doc/howto/functional.rst:94
 msgid "Modularity."
-msgstr ""
+msgstr "Modularidad."
 
 #: ../Doc/howto/functional.rst:95
 msgid "Composability."
-msgstr ""
+msgstr "Componibilidad."
 
 #: ../Doc/howto/functional.rst:96
 msgid "Ease of debugging and testing."
-msgstr ""
+msgstr "Fácil de depurar y probar."
 
 #: ../Doc/howto/functional.rst:100
 msgid "Formal provability"
-msgstr ""
+msgstr "Demostrabilidad formal"
 
 #: ../Doc/howto/functional.rst:102
 msgid ""
 "A theoretical benefit is that it's easier to construct a mathematical proof "
 "that a functional program is correct."
 msgstr ""
+"Un beneficio teórico es que es más fácil construir una demostración "
+"matemática de que un programa funcional es correcto."
 
 #: ../Doc/howto/functional.rst:105
 msgid ""
@@ -199,6 +281,13 @@ msgid ""
 "looks right; the goal is instead a rigorous proof that a program produces "
 "the right result for all possible inputs."
 msgstr ""
+"Por un largo tiempo los investigadores se han interesado en buscar formas de "
+"demostrar matemáticamente que los programas son correctos. Esto es diferente "
+"de probar un programa sobre numerosas entradas y concluir que su salida es "
+"usualmente correcta, o leer el código fuente de un programa y concluir que "
+"el código se ve bien; en lugar de eso el objetivo es una demostración "
+"rigurosa de que un programa produce el resultado correcto para todas las "
+"entradas posibles."
 
 #: ../Doc/howto/functional.rst:112
 msgid ""
@@ -210,6 +299,14 @@ msgid ""
 "This continues until you reach the end of the program, at which point the "
 "invariants should match the desired conditions on the program's output."
 msgstr ""
+"La técnica utilizada para demostrar que los programas son correctos es "
+"anotar **invariantes**, propiedades de los datos de entrada y de las "
+"variables del programa que siempre son verdaderas. Por cada línea de código, "
+"debe mostrar que si las invariantes X e Y son verdaderas **antes** que la "
+"línea sea ejecutada, las invariantes ligeramente diferentes X' e Y' son "
+"verdaderas **después** que la línea se ejecutó. Esto continúa hasta que "
+"alcance el fin del programa, punto en el cuál las invariantes deben "
+"coincidir con las condiciones deseadas en la salida del programa."
 
 #: ../Doc/howto/functional.rst:120
 msgid ""
@@ -218,6 +315,10 @@ msgid ""
 "invariants that were true before the assignment without producing any new "
 "invariants that can be propagated onward."
 msgstr ""
+"La evitación de las asignaciones de la programación funcional surge porque "
+"las asignaciones son difíciles de manejar con esta técnica; las asignaciones "
+"pueden romper invariantes que eran verdaderas antes de la asignación sin "
+"producir nuevas invariantes que se puedan propagar hacia adelante."
 
 #: ../Doc/howto/functional.rst:125
 msgid ""
@@ -230,6 +331,16 @@ msgid ""
 "the question of verifying the proof; maybe there's an error in it, and you "
 "wrongly believe you've proved the program correct."
 msgstr ""
+"Desafortunadamente, demostrar que los programas son correctos es en gran "
+"parte impráctico y no relevante al software de Python. Aún los programas "
+"triviales requieren demostraciones que tienen varias páginas; la "
+"demostración de correctitud para un programa moderadamente complicado sería "
+"enorme, y pocos o ninguno de los programas que usa diariamente (el "
+"interprete de Python, su analizador XML, su navegador web) se podrían "
+"demostrar que son correctos. Aún si anotó o generó una demostración, "
+"entonces estaría la cuestión de verificar la demostración; quizás hay un "
+"error en ella, y equivocadamente cree que demostró que el programa es "
+"correcto."
 
 #: ../Doc/howto/functional.rst:136
 msgid "Modularity"
