--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-30 17:02-0300\n"
+"PO-Revision-Date: 2021-02-01 19:51-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -357,9 +357,9 @@ msgid ""
 "the source and overwrite the cached file, thus losing the benefits of "
 "caching."
 msgstr ""
-"El esquema de Python para almacenar en caché el código de bytes en archivos "
-"*.pyc* no funcionó bien en entornos con múltiples intérpretes de Python. Si "
-"un intérprete encontrara un archivo en caché creado por otro intérprete, "
+"El esquema de Python para almacenar en caché bytecode en archivos *.pyc* no "
+"funcionó bien en entornos con múltiples intérpretes de Python. Si un "
+"intérprete encontrara un archivo en caché creado por otro intérprete, "
 "volvería a compilar la fuente y sobrescribiría el archivo en caché, "
 "perdiendo así los beneficios del almacenamiento en caché."
 
@@ -441,8 +441,8 @@ msgstr ""
 "reflejar la nueva convención de nomenclatura y el directorio de destino. La "
 "invocación por línea de comandos de *compileall* tiene nuevas opciones: ``-"
 "i`` para especificar una lista de archivos y directorios para compilar y ``-"
-"b`` que hace que los archivos de código de bytes se escriban en su ubicación "
-"heredada en lugar de *__pycache__*."
+"b`` que hace que los archivos bytecode se escriban en su ubicación heredada "
+"en lugar de *__pycache__*."
 
 #: ../Doc/whatsnew/3.2.rst:344
 msgid ""
@@ -453,10 +453,10 @@ msgid ""
 "compatible are included with the documentation)."
 msgstr ""
 "El módulo :mod:`importlib.abc` se ha actualizado con una nueva :term:`clase "
-"base abstracta <abstract base class>` para cargar archivos de código de "
-"bytes. Las ABC (por sus siglas en inglés *abstract base class*) obsoletas, :"
-"class:`~importlib.abc.PyLoader` y :class:`~ importlib.abc.PyPycLoader`, han "
-"sido deprecadas (las instrucciones sobre cómo mantener la compatibilidad con "
+"base abstracta <abstract base class>` para cargar archivos bytecode. Las ABC "
+"(por sus siglas en inglés *abstract base class*) obsoletas, :class:"
+"`~importlib.abc.PyLoader` y :class:`~ importlib.abc.PyPycLoader`, han sido "
+"deprecadas (las instrucciones sobre cómo mantener la compatibilidad con "
 "Python 3.1 se incluyen con la documentación)."
 
 #: ../Doc/whatsnew/3.2.rst:352
@@ -478,9 +478,9 @@ msgid ""
 "giving them a common directory and distinct names for each version."
 msgstr ""
 "El directorio del repositorio PYC permite la ubicación conjunta de varios "
-"archivos de cache en código de bytes. Este PEP implementa un mecanismo "
-"similar para los archivos de objetos compartidos dándoles un directorio "
-"común y nombres distintos para cada versión."
+"archivos de cache bytecode. Este PEP implementa un mecanismo similar para "
+"los archivos de objetos compartidos dándoles un directorio común y nombres "
+"distintos para cada versión."
 
 #: ../Doc/whatsnew/3.2.rst:363
 msgid ""
@@ -902,9 +902,9 @@ msgid ""
 "provides a concise, readable alternative to using an :term:`abstract base "
 "class` in an expression like ``isinstance(x, collections.Callable)``:"
 msgstr ""
-"Se resucitó la función integrada :func:`callable` de Py2.x. Proporciona una "
-"alternativa concisa y legible al uso de una :term:`abstract base class` en "
-"una expresión como ``isinstance(x, collections.Callable)``:"
+"Se resucitó la función incorporada :func:`callable` de Py2.x. Proporciona "
+"una alternativa concisa y legible al uso de una :term:`abstract base class` "
+"en una expresión como ``isinstance(x, collections.Callable)``:"
 
 #: ../Doc/whatsnew/3.2.rst:646
 msgid "(See :issue:`10518`.)"
@@ -967,16 +967,21 @@ msgid ""
 "Another significant win is the addition of substantially better support for "
 "*SSL* connections and security certificates."
 msgstr ""
+"Otro logro importante es la adición de un soporte sustancialmente mejor para "
+"conexiones *SSL* y certificados de seguridad."
 
 #: ../Doc/whatsnew/3.2.rst:674
 msgid ""
 "In addition, more classes now implement a :term:`context manager` to support "
 "convenient and reliable resource clean-up using a :keyword:`with` statement."
 msgstr ""
+"Además, más clases ahora implementan :term:`context manager` para soportar "
+"una conveniente y confiable limpieza de recursos usando una declaración :"
+"keyword:`with`."
 
 #: ../Doc/whatsnew/3.2.rst:678
 msgid "email"
-msgstr ""
+msgstr "email"
 
 #: ../Doc/whatsnew/3.2.rst:680
 msgid ""
@@ -987,14 +992,26 @@ msgid ""
 "email.  So, the email package had to be extended to parse and generate email "
 "messages in bytes format."
 msgstr ""
+"La usabilidad del paquete :mod:`email` en Python 3 se ha solucionado "
+"principalmente gracias a los amplios esfuerzos de R. David Murray. El "
+"problema era que los correos electrónicos generalmente se leen y almacenan "
+"en forma de :class:`bytes` en lugar de texto :class:`str`, y pueden contener "
+"múltiples codificaciones dentro de un solo correo electrónico. Por lo tanto, "
+"el paquete email tuvo que ampliarse para analizar y generar mensajes de "
+"correo electrónico en formato de bytes."
 
 #: ../Doc/whatsnew/3.2.rst:687
+#, fuzzy
 msgid ""
 "New functions :func:`~email.message_from_bytes` and :func:`~email."
 "message_from_binary_file`, and new classes :class:`~email.parser."
 "BytesFeedParser` and :class:`~email.parser.BytesParser` allow binary message "
 "data to be parsed into model objects."
 msgstr ""
+"Nuevas funciones :func:`~email.message_from_bytes` y :func:`~email."
+"message_from_binary_file`, y nuevas clases :class:`~email.parser."
+"BytesFeedParser` y :class:`~email.parser.BytesParser` permiten mensajes de "
+"datos en binario ser analizados (*parsed*) en objetos modelados."
 
 #: ../Doc/whatsnew/3.2.rst:692
 msgid ""
@@ -1003,6 +1020,11 @@ msgid ""
 "Transfer-Encoding` of *8bit* using the charset specified in the MIME headers "
 "and return the resulting string."
 msgstr ""
+"Dada la entrada de bytes al modelo, :meth:`~email.message.Message."
+"get_payload` decodificará por defecto un cuerpo de mensaje que tiene un :"
+"mailheader:`Content-Transfer-Encoding` de *8bit* usando el juego de "
+"caracteres especificado en el encabezados MIME y retorna la cadena de "
+"caracteres resultante."
 
 #: ../Doc/whatsnew/3.2.rst:697
 msgid ""
@@ -1010,12 +1032,18 @@ msgid ""
 "convert message bodies that have a :mailheader:`Content-Transfer-Encoding` "
 "of *8bit* to instead have a *7bit* :mailheader:`Content-Transfer-Encoding`."
 msgstr ""
+"Dada la entrada de bytes al modelo, :class:`~email.generator.Generator` "
+"convertirá los cuerpos de los mensajes que tengan un :mailheader:`Content-"
+"Transfer-Encoding` de *8bit* para tener en su lugar un *7bit*:mailheader:"
+"`Content-Transfer-Encoding`."
 
 #: ../Doc/whatsnew/3.2.rst:701
 msgid ""
 "Headers with unencoded non-ASCII bytes are deemed to be :rfc:`2047`\\ -"
 "encoded using the *unknown-8bit* character set."
 msgstr ""
+"Los encabezados con bytes no codificados que no sean ASCII se consideran :"
+"rfc:`2047`\\ -codificados utilizando el juego de caracteres *unknown-8bit*."
 
 #: ../Doc/whatsnew/3.2.rst:704
 msgid ""
@@ -1024,6 +1052,11 @@ msgid ""
 "input used to build the model, including message bodies with a :mailheader:"
 "`Content-Transfer-Encoding` of *8bit*."
 msgstr ""
+"Una nueva clase :class:`~email.generator.BytesGenerator` produce bytes como "
+"salida, conservando cualquier dato no ASCII sin cambios que estuviera "
+"presente en la entrada utilizada para construir el modelo, incluidos los "
+"cuerpos de los mensajes con un :mailheader:`Content-Transfer-Encoding` de "
+"*8bit*."
 
 #: ../Doc/whatsnew/3.2.rst:709
 msgid ""
@@ -1033,99 +1066,127 @@ msgid ""
 "message.Message` object and can optionally obtain the *from_addr* and "
 "*to_addrs* addresses directly from the object."
 msgstr ""
+"La clase :mod:`smtplib`:class:`~smtplib.SMTP` ahora acepta una cadena de "
+"bytes para el argumento *msg* para el método :meth:`~smtplib.SMTP.sendmail`, "
+"y un nuevo método, :meth:`~smtplib.SMTP.send_message` acepta un objeto :"
+"class:`~email.message.Message` y opcionalmente puede obtener las direcciones "
+"*from_addr* y *to_addrs* directamente del objeto."
 
 #: ../Doc/whatsnew/3.2.rst:715
 msgid ""
 "(Proposed and implemented by R. David Murray, :issue:`4661` and :issue:"
 "`10321`.)"
 msgstr ""
+"(Propuesto e implementado por R. David Murray, :issue:`4661` y :issue:"
+"`10321`.)"
 
 #: ../Doc/whatsnew/3.2.rst:718
 msgid "elementtree"
-msgstr ""
+msgstr "elementtree"
 
 #: ../Doc/whatsnew/3.2.rst:720
 msgid ""
 "The :mod:`xml.etree.ElementTree` package and its :mod:`xml.etree."
 "cElementTree` counterpart have been updated to version 1.3."
 msgstr ""
+"El paquete :mod:`xml.etree.ElementTree` y su contraparte :mod:`xml.etree."
+"cElementTree` se han actualizado a la versión 1.3."
 
 #: ../Doc/whatsnew/3.2.rst:723
 msgid "Several new and useful functions and methods have been added:"
-msgstr ""
+msgstr "Se han agregado varias nuevas y útiles funciones y métodos:"
 
 #: ../Doc/whatsnew/3.2.rst:725
 msgid ""
 ":func:`xml.etree.ElementTree.fromstringlist` which builds an XML document "
 "from a sequence of fragments"
 msgstr ""
+":func:`xml.etree.ElementTree.fromstringlist` que crea un documento XML a "
+"partir de una secuencia de fragmentos"
 
 #: ../Doc/whatsnew/3.2.rst:727
 msgid ""
 ":func:`xml.etree.ElementTree.register_namespace` for registering a global "
 "namespace prefix"
 msgstr ""
+":func:`xml.etree.ElementTree.register_namespace` para registrar un prefijo "
+"de espacio de nombres global"
 
 #: ../Doc/whatsnew/3.2.rst:729
 msgid ""
 ":func:`xml.etree.ElementTree.tostringlist` for string representation "
 "including all sublists"
 msgstr ""
+":func:`xml.etree.ElementTree.tostringlist` para la representación de cadenas "
+"de caracteres, incluidas todas las sublistas"
 
 #: ../Doc/whatsnew/3.2.rst:731
 msgid ""
 ":meth:`xml.etree.ElementTree.Element.extend` for appending a sequence of "
 "zero or more elements"
 msgstr ""
+":meth:`xml.etree.ElementTree.Element.extend` para agregar una secuencia de "
+"cero o más elementos"
 
 #: ../Doc/whatsnew/3.2.rst:733
 msgid ""
 ":meth:`xml.etree.ElementTree.Element.iterfind` searches an element and "
 "subelements"
 msgstr ""
+":meth:`xml.etree.ElementTree.Element.iterfind` busca un elemento y "
+"subelementos"
 
 #: ../Doc/whatsnew/3.2.rst:735
 msgid ""
 ":meth:`xml.etree.ElementTree.Element.itertext` creates a text iterator over "
 "an element and its subelements"
 msgstr ""
+":meth:`xml.etree.ElementTree.Element.itertext` crea un iterador de texto "
+"sobre un elemento y sus subelementos"
 
 #: ../Doc/whatsnew/3.2.rst:737
 msgid ""
 ":meth:`xml.etree.ElementTree.TreeBuilder.end` closes the current element"
 msgstr ""
+":meth:`xml.etree.ElementTree.TreeBuilder.end` cierra el elemento actual."
 
 #: ../Doc/whatsnew/3.2.rst:738
 msgid ""
 ":meth:`xml.etree.ElementTree.TreeBuilder.doctype` handles a doctype "
 "declaration"
 msgstr ""
+":meth:`xml.etree.ElementTree.TreeBuilder.doctype` gestiona la declaración "
+"*doctype*"
 
 #: ../Doc/whatsnew/3.2.rst:741
 msgid "Two methods have been deprecated:"
-msgstr ""
+msgstr "Dos métodos que han sido deprecados:"
 
 #: ../Doc/whatsnew/3.2.rst:743
 msgid ":meth:`xml.etree.ElementTree.getchildren` use ``list(elem)`` instead."
 msgstr ""
+":meth:`xml.etree.ElementTree.getchildren` usar ``list(elem)`` en su lugar."
 
 #: ../Doc/whatsnew/3.2.rst:744
 msgid ":meth:`xml.etree.ElementTree.getiterator` use ``Element.iter`` instead."
 msgstr ""
+":meth:`xml.etree.ElementTree.getiterator` usar ``Element.iter`` en su lugar."
 
 #: ../Doc/whatsnew/3.2.rst:746
 msgid ""
 "For details of the update, see `Introducing ElementTree <http://effbot.org/"
 "zone/elementtree-13-intro.htm>`_ on Fredrik Lundh's website."
 msgstr ""
+"Para los detalles de la actualización, veer `Introducing ElementTree <http://"
+"effbot.org/zone/elementtree-13-intro.htm>`_ en el sitio web de Fredrik Lundh."
 
 #: ../Doc/whatsnew/3.2.rst:749
 msgid "(Contributed by Florent Xicluna and Fredrik Lundh, :issue:`6472`.)"
-msgstr ""
+msgstr "(Contribución de Florent Xicluna y Fredrik Lundh, :issue:`6472`.)"
 
 #: ../Doc/whatsnew/3.2.rst:752
 msgid "functools"
-msgstr ""
+msgstr "functools"
 
 #: ../Doc/whatsnew/3.2.rst:754
 msgid ""
@@ -1133,24 +1194,35 @@ msgid ""
 "calls.  :func:`functools.lru_cache` can save repeated queries to an external "
 "resource whenever the results are expected to be the same."
 msgstr ""
+"El módulo :mod:`functools` incluye un nuevo decorador para almacenar en "
+"caché las llamadas a funciones. :func:`functools.lru_cache` puede guardar "
+"consultas repetidas en un recurso externo siempre que se espere que los "
+"resultados sean los mismos."
 
 #: ../Doc/whatsnew/3.2.rst:758
 msgid ""
 "For example, adding a caching decorator to a database query function can "
 "save database accesses for popular searches:"
 msgstr ""
+"Por ejemplo, agregar un decorador de almacenamiento en caché a una función "
+"de consulta de base de datos puede ahorrar accesos a la base de datos para "
+"búsquedas populares:"
 
 #: ../Doc/whatsnew/3.2.rst:771
 msgid ""
 "To help with choosing an effective cache size, the wrapped function is "
 "instrumented for tracking cache statistics:"
 msgstr ""
+"Para ayudar a elegir un tamaño de caché efectivo, la función encapsulada "
+"está instrumentada para rastrear estadísticas de caché:"
 
 #: ../Doc/whatsnew/3.2.rst:777
 msgid ""
 "If the phonelist table gets updated, the outdated contents of the cache can "
 "be cleared with:"
 msgstr ""
+"Si la tabla *phonelist* se actualiza, el contenido desactualizado de la "
+"caché se puede borrar con:"
 
 #: ../Doc/whatsnew/3.2.rst:782
 msgid ""
@@ -1159,6 +1231,10 @@ msgid ""
 "activestate.com/recipes/498245>`_\\, `recipe 577479 <https://code."
 "activestate.com/recipes/577479>`_\\, :issue:`10586`, and :issue:`10593`.)"
 msgstr ""
+"(Contribución de Raymond Hettinger e incorporando ideas de diseño de Jim "
+"Baker, Miki Tebeka, y Nick Coghlan; ver `recipe 498245 <https://code."
+"activestate.com/recipes/498245>`_\\, `recipe 577479 <https://code."
+"activestate.com/recipes/577479>`_\\, :issue:`10586`, y :issue:`10593`.)"
 
 #: ../Doc/whatsnew/3.2.rst:788
 msgid ""
@@ -1168,18 +1244,28 @@ msgid ""
 "defined.  And now it also gracefully skips over missing attributes such as :"
 "attr:`__doc__` which might not be defined for the wrapped callable."
 msgstr ""
+"El decorador :func:`functools.wraps` ahora agrega un atributo :attr:"
+"`__wrapped__` que apunta a la función invocable original. Esto permite la "
+"introspección de funciones envueltas (*wrapped*). También copia :attr:"
+"`__annotations__` si está definido. Y ahora también omite elegantemente los "
+"atributos faltantes como :attr:`__doc__` que podrían no estar definidos para "
+"el invocable envuelto."
 
 #: ../Doc/whatsnew/3.2.rst:794
 msgid ""
 "In the above example, the cache can be removed by recovering the original "
 "function:"
 msgstr ""
+"En el ejemplo anterior, la caché se puede eliminar recuperando la función "
+"original:"
 
 #: ../Doc/whatsnew/3.2.rst:799
 msgid ""
 "(By Nick Coghlan and Terrence Cole; :issue:`9567`, :issue:`3445`, and :issue:"
 "`8814`.)"
 msgstr ""
+"(Por Nick Coghlan y Terrence Cole; :issue:`9567`, :issue:`3445`, y :issue:"
+"`8814`.)"
 
 #: ../Doc/whatsnew/3.2.rst:802
 msgid ""
@@ -1187,25 +1273,32 @@ msgid ""
 "`functools.total_ordering` will use existing equality and inequality methods "
 "to fill in the remaining methods."
 msgstr ""
+"Para ayudar a escribir clases con métodos de comparación enriquecidos, un "
+"nuevo decorador :func:`functools.total_ordering` usará métodos de igualdad y "
+"desigualdad existentes para completar los métodos restantes."
 
 #: ../Doc/whatsnew/3.2.rst:806
 msgid ""
 "For example, supplying *__eq__* and *__lt__* will enable :func:`~functools."
 "total_ordering` to fill-in *__le__*, *__gt__* and *__ge__*::"
 msgstr ""
+"Por ejemplo, suministrar *__eq__* y *__lt__* permitirá que :func:`~functools."
+"total_ordering` complete *__le__*, *__gt__* and *__ge__*::"
 
 #: ../Doc/whatsnew/3.2.rst:819
 msgid ""
 "With the *total_ordering* decorator, the remaining comparison methods are "
 "filled in automatically."
 msgstr ""
+"Con el decorador *total_ordering*, los métodos de comparación restantes se "
+"completan automáticamente."
 
 #: ../Doc/whatsnew/3.2.rst:822 ../Doc/whatsnew/3.2.rst:834
 #: ../Doc/whatsnew/3.2.rst:878 ../Doc/whatsnew/3.2.rst:899
 #: ../Doc/whatsnew/3.2.rst:913 ../Doc/whatsnew/3.2.rst:1783
 #: ../Doc/whatsnew/3.2.rst:1828
 msgid "(Contributed by Raymond Hettinger.)"
-msgstr ""
+msgstr "(Contribuido por Raymond Hettinger.)"
 
 #: ../Doc/whatsnew/3.2.rst:824
 msgid ""
