Corregidas las referencias de términos inconsistentes

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-01-26 22:51-0600\n"
+"PO-Revision-Date: 2021-02-01 23:18-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1485,7 +1485,7 @@ msgid ""
 "substitutability for lists. (Contributed by Raymond Hettinger in :issue:"
 "`23704`.)"
 msgstr ""
-"Ahora la clase :class:`~collections.deque` define meth:`~collections.deque."
+"Ahora la clase :class:`~collections.deque` define :meth:`~collections.deque."
 "index`, :meth:`~collections.deque.insert` y :meth:`~collections.deque.copy`, "
 "y soporta los operadores ``+`` y ``*``. Esto permite que las deques sean "
 "reconocidas como :class:`~collections.abc.MutableSequence` y mejora su "
@@ -1575,8 +1575,9 @@ msgid ""
 msgstr ""
 "Una nueva opción :mod:`compileall`, :samp:`-j {N}`, permite ejecutar *N* "
 "workers simultáneamente para realizar la compilación de bytecode en "
-"paralelo. La función tiene un parámetro ``workers`` correspondiente. "
-"(Contribución de Claudiu Popa en :issue:`16104`.)"
+"paralelo. La función :func:`~compileall.compile_dir` tiene un parámetro "
+"``workers`` correspondiente. (Contribución de Claudiu Popa en :issue:"
+"`16104`.)"
 
 #: ../Doc/whatsnew/3.5.rst:965
 msgid ""
